[FEATURES] Setup  Restful APIs Voucher, validation data, design pattern service base.
