# src/apis/core_v1/routers/voucher.router.ts
@@ -8,7 +8,7 @@ voucherRouter.post('/create-voucher', voucherController.createController);
 voucherRouter.put('/update-voucher', voucherController.updatePutController);
 voucherRouter.patch('/update-voucher', voucherController.updatePathController);
 voucherRouter.get('/read-list-voucher', voucherController.readListController);
-voucherRouter.get('/read-one-voucher', voucherController.readOneController);
+voucherRouter.get('/read-one-voucher/:id', voucherController.readOneController);
 voucherRouter.delete('/delete-voucher', voucherController.deleteController);
 
 export default voucherRouter;
